Task instance Java/114